# SF_prac_8.1

./: README.md  baseline.ipynb  game.ipynb  game_v2.py  game_v3.py  pyproject.toml  requirements.txt
